minimal changes introduction

--- a/minimax.tex
+++ b/minimax.tex
@@ -121,9 +121,9 @@ We compare the effectiveness of several different strategies  including strategi
 %\Cref{sec:background} provides the necessary background. In \cref{sec:mmr} we provide a method for robust winner determination using the minimax criterion. %, a method that selects a winner that minimizes the worst possible regret.
 %In Section \ref{sec:elicit} we provide an interactive elicitation protocol based on minimal regret;  Section \ref{sec:experiments} presents an experimental validation of our approach and some guidelines stemming from these simulations; and Section \ref{sec:conclusions} provides some final thoughts.
 
-\section{Related Work}
+\paragraph{Related Work}
 \label{sec:related}
-In the context of social choice, several authors have been interested in obtaining information about winners with reduced assumptions about the knowledge of the agent preferences (assuming that the voting rule is known). One early work is  by \Citet{Conitzer2005} who studied the complexity of communication, using different voting rules, determining lower and upper bounds; they showed that, in the worst case, the agents should send their complete set of preference for most of the rules they investigated. 
+In the context of social choice, several authors have been interested in obtaining information about winners with reduced assumptions about the knowledge of the agent preferences (assuming that the voting rule is known). One early work is  by \Citet{Conitzer2005} who studied the complexity of communication, using different voting rules, determining lower and upper bounds; they showed that, in the worst case, the agents should send their complete set of preference for several rules. 
 
 \Citet{Konczak05} studied the computation of possible and necessary winners in the case of partial knowledge of agent preferences, for various voting rules, and showed that the problem is hard in the general case.
 This work was then extended by \citet{Xia2008} who showed that, while the identification of a necessary co-winner in scoring rules is polynomial,  the determination of possible co-winners is NP-hard; they also  proposed polynomial-time algorithms when using maximin and Bucklin.
