references in one page

--- a/biblio.bib
+++ b/biblio.bib
@@ -2,8 +2,7 @@
   author    = {Benabbou,Nawal and Di Sabatino Di Diodoro, Serena and Perny, Patrice and Viappiani,Paolo},
   title     = {Incremental Preference Elicitation in Multi-attribute Domains for
                Choice and Ranking with the Borda Count},
-  booktitle = {Scalable Uncertainty Management - 10th International Conference, {SUM}
-               2016, Nice, France, September 21-23, 2016, Proceedings},
+  booktitle = {Proceedings of {SUM} 2016},
   pages     = {81--95},
   year      = {2016}
 }
@@ -15,7 +14,6 @@
   number = {8},
   pages = {686 - 713},
   year = {2006},
-  issn = {0004-3702},
   doi = {10.1016/j.artint.2006.02.003},
   author = {Boutilier,Craig and Patrascu,Relu and Poupart,Pascal and Schuurmans,Dale}
 }
@@ -26,18 +24,17 @@
   advisor = {Boutilier, Craig},
   title = {Decision-Theoretic Elicitation of Generalized Additive Utilities},
   year = {2012},
-  isbn = {9780494975220},
   publisher = {University of Toronto},
   url={dl.acm.org/doi/book/10.5555/2519022}
 }
 
 @InProceedings{Cailloux2014,
-  Title = {Eliciting a Suitable Voting Rule via Examples},
-  Author = {Cailloux,Olivier and Endriss,Ulle},
-  Booktitle = {{ECAI} 2014 - 21st European Conference on Artificial Intelligence, 18-22 August 2014, Prague, Czech Republic - Including Prestigious Applications of Intelligent Systems {(PAIS} 2014)},
-  Year = {2014},
-  Pages = {183--188},
-  Doi = {10.3233/978-1-61499-419-0-183},
+	Title = {Eliciting a Suitable Voting Rule via Examples},
+	Author = {Cailloux,Olivier and Endriss,Ulle},
+	Booktitle = {Proceedings of {ECAI} 2014},
+	Year = {2014},
+	Pages = {183--188},
+	Doi = {10.3233/978-1-61499-419-0-183},
 }
 
 @Article{Kalech2011,
@@ -54,19 +51,18 @@
 @InProceedings{Konczak05,
   Title = {Voting Procedures with Incomplete Preferences},
   Author = {Konczak,Kathrin and Lang,Jerome},
-  Booktitle = {IJCAI Workshop on Advances in Preference Handling},
+  Booktitle = {Proceedings of IJCAI'05},
   Year = {2005},
   Pages = {124--129},
-  Keywords = {voting, social choice, preferences},
   url={www.eecs.harvard.edu/cs286r/courses/fall11/papers/KL05.pdf}
 }
 
 @Book{Kouvelis1997,
   Title = {Robust Discrete Optimization and Its Applications},
   Author = {Kouvelis, Panos and Yu, Gang},
-  Publisher                = {Kluwer},
-  Year                     = {1997},
-  Address                  = {Dordrecht}
+  Publisher = {Kluwer},
+  Year = {1997},
+  Address = {Dordrecht}
 }
 
 @Article{Llamazares2016,
@@ -74,7 +70,6 @@
   Author                   = {Llamazares, Bonifacio},
   Journal                  = {Group Decision and Negotiation},
   Year                     = {2016},
-  Month                    = {May},
   Number                   = {3},
   Pages                    = {567--584},
   Volume                   = {25},
@@ -95,10 +90,9 @@
 @inproceedings{Lu2011,
 	author = {Lu, Tyler and Boutilier, Craig},
 	year = {2011},
-	month = {01},
 	pages = {287-293},
 	title = {Robust Approximation and Incremental Elicitation in Voting Protocols},
-	journal = {IJCAI International Joint Conference on Artificial Intelligence},
+	booktitle = {Proceedings of IJCAI'11},
 	doi = {10.5591/978-1-57735-516-8/IJCAI11-058}
 }
 
@@ -108,11 +102,9 @@
   Author                   = {Naamani-Dery, Lihi and Golan, Inon and Kalech, Meir and Rokach, Lior},
   Journal                  = {Group Decision and Negotiation},
   Year                     = {2015},
-  Month                    = {Nov},
   Number                   = {6},
   Pages                    = {1015--1033},
   Volume                   = {24},
-  Day                      = {01},
   doi={10.1007/s10726-015-9427-9}
 }
 
@@ -124,7 +116,6 @@
   number={3},
   pages={475--502},
   year={2009},
-  publisher={Oxford University Press},
   doi={10.1093/logcom/exn012}
 }
 
@@ -156,52 +147,40 @@
   Pages                    = {78 - 85},
   Volume                   = {74},
   Doi                      = {10.1016/0377-2217(94)90205-4},
-  ISSN                     = {0377-2217}
 }
 
 
 @InProceedings{Viappiani2018,
 	author={Viappiani, Paolo},
-	editor={Ciucci, Davide and Pasi, Gabriella and Vantaggi, Barbara},
 	title={Positional Scoring Rules with Uncertain Weights},
 	booktitle= {Scalable Uncertainty Management},
 	year={2018},
-	publisher={Springer International Publishing},
 	pages={306--320},
-	isbn={978-3-030-00461-3},
 	doi={10.1007/978-3-030-00461-3_21}
 }
 
-
-@InProceedings{Xia2008,
-  Title                    = {Determining Possible and Necessary Winners under Common Voting Rules Given Partial Orders},
-  Author                   = {Xia,Lirong and Conitzer,Vincent},
-  Booktitle                = {Proceedings of the Twenty-Third {AAAI} Conference on Artificial Intelligence, {AAAI} 2008, Chicago, Illinois, USA, July 13-17, 2008},
-  Year                     = {2008},
-  Pages                    = {196--201},
-  doi= {10.1613/jair.3186}
+@inproceedings{Xia2008,
+	author = {Xia, Lirong and Conitzer, Vincent},
+	title = {Determining Possible and Necessary Winners under Common Voting Rules given Partial Orders},
+	year = {2008},
+	booktitle = {Proceedings of AAAI'08},
+	pages = {196–201},
+	doi= {10.1613/jair.3186}
 }
 
 @inproceedings{Conitzer2005,
 	author = {Conitzer, Vincent and Sandholm, Tuomas},
 	title = {Communication Complexity of Common Voting Rules},
 	year = {2005},
-	isbn = {1595930493},
-	publisher = {Association for Computing Machinery},
-	address = {New York, NY, USA},
 	doi = {10.1145/1064009.1064018},
-	booktitle = {Proceedings of the 6th ACM Conference on Electronic Commerce},
-	pages = {78–87},
-	numpages = {10},
-	keywords = {communication complexity, voting},
-	location = {Vancouver, BC, Canada},
-	series = {EC '05}
+	booktitle = {Proceedings of EC'05},
+	pages = {78–87}
 }
 
 @INPROCEEDINGS{Pini2007,
 	author = {Pini, Maria Silvia and Rossi, Francesca and Venable, Kristen Brent and Walsh, Toby},
 	title = {Incompleteness and Incomparability in Preference Aggregation},
-	booktitle = {IJCAI},
+	booktitle = {Proceedings of IJCAI'07},
 	year = {2007},
 	pages = {1464-1469},
 	doi = {10.1016/j.artint.2010.11.009}
@@ -211,13 +190,9 @@
 	author = {Walsh, Toby},
 	title = {Uncertainty in Preference Elicitation and Aggregation},
 	year = {2007},
-	isbn = {9781577353232},
-	publisher = {AAAI Press},
-	booktitle = {Proceedings of the 22nd National Conference on Artificial Intelligence - Volume 1},
+	booktitle = {Proceedings of AAAI'07},
+	volume={1},
 	pages = {3–8},
-	numpages = {6},
-	location = {Vancouver, British Columbia, Canada},
-	series = {AAAI'07},
 	url = {dl.acm.org/doi/10.5555/1619645.1619648}
 }
 
@@ -225,15 +200,9 @@
 	author = {Walsh, Toby},
 	title = {Complexity of Terminating Preference Elicitation},
 	year = {2008},
-	isbn = {9780981738116},
-	publisher = {International Foundation for Autonomous Agents and Multiagent Systems},
-	address = {Richland, SC},
-	booktitle = {Proceedings of the 7th International Joint Conference on Autonomous Agents and Multiagent Systems - Volume 2},
+	booktitle = {Proceedings of AAMAS'08},
+	volume={2},
 	pages = {967–974},
-	numpages = {8},
-	keywords = {elicitation, complexity, preferences},
-	location = {Estoril, Portugal},
-	series = {AAMAS '08},
 	url ={dl.acm.org/doi/abs/10.5555/1402298.1402357}
 }
 
@@ -242,16 +211,10 @@
 	author = {Conitzer, Vincent},
 	title = {Eliciting Single-Peaked Preferences Using Comparison Queries},
 	year = {2009},
-	issue_date = {May 2009},
-	publisher = {AI Access Foundation},
-	address = {El Segundo, CA, USA},
 	volume = {35},
 	number = {1},
-	issn = {1076-9757},
-	journal = {J. Artif. Int. Res.},
-	month = jun,
+	journal = {Journal of Artificial Intelligence Research},
 	pages = {161–191},
-	numpages = {31},
 	url={dl.acm.org/doi/10.5555/1641503.1641507}
 }
 
@@ -259,13 +222,8 @@
 	author = {Dey, Palash and Misra, Neeldhara},
 	title = {Elicitation for Preferences Single Peaked on Trees},
 	year = {2016},
-	isbn = {9781577357704},
-	publisher = {AAAI Press},
-	booktitle = {Proceedings of the Twenty-Fifth International Joint Conference on Artificial Intelligence},
+	booktitle = {Proceedings of IJCAI'16},
 	pages = {215–221},
-	numpages = {7},
-	location = {New York, New York, USA},
-	series = {IJCAI'16},
 	url={www.ijcai.org/Proceedings/16/Papers/038.pdf}
 }
 
@@ -273,10 +231,9 @@
 	author={Dey,Palash and Misra,Neeldhara},
 	title={Preference Elicitation for Single Crossing Domain},
 	year={2016},
-	cdate={1451606400000},
 	pages={222-228},
 	url={www.ijcai.org/Abstract/16/039},
-	booktitle={IJCAI}
+	booktitle={Proceedings of IJCAI'16}
 }
 
 @article{Dey2018,
@@ -285,30 +242,23 @@
 	volume = {726},
 	pages = {78 - 99},
 	year = {2018},
-	issn = {0304-3975},
 	doi = {10.1016/j.tcs.2018.03.012},
 	author = {Dey,Palash and Misra,Neeldhara and Y. Narahari},
-	keywords = {Voting, Manipulation, Incomplete information, Algorithm, Computational complexity}
 }
 
 @inproceedings{Endriss2016,
 	author = {Endriss, Ulle and Obraztsova, Svetlana and Polukarov, Maria and Rosenschein, Jeffrey S.},
 	title = {Strategic Voting with Incomplete Information},
 	year = {2016},
-	isbn = {9781577357704},
-	publisher = {AAAI Press},
-	booktitle = {Proceedings of the Twenty-Fifth International Joint Conference on Artificial Intelligence},
+	booktitle = {Proceedings of IJCAI'16},
 	pages = {236–242},
-	numpages = {7},
-	location = {New York, New York, USA},
-	series = {IJCAI'16},
 	url={www.ijcai.org/Proceedings/16/Papers/041.pdf}
 }
 
 @article{Dey2018_2,
 	title={Manipulative Elicitation - A New Attack on Elections with Incomplete Preferences},
 	author={Palash Dey},
-	journal={Theor. Comput. Sci.},
+	journal={Theoretical Computer Science},
 	year={2018},
 	volume={731},
 	pages={36-49},
@@ -319,14 +269,9 @@
 	author = {Elkind, Edith and Erd\'{e}lyi, G\'{a}bor},
 	title = {Manipulation under Voting Rule Uncertainty},
 	year = {2012},
-	isbn = {0981738125},
-	publisher = {International Foundation for Autonomous Agents and Multiagent Systems},
-	address = {Richland, SC},
-	booktitle = {Proceedings of the 11th International Conference on Autonomous Agents and Multiagent Systems - Volume 2},
+	booktitle = {Proceedings AAMAS'12},
+	volume={2},
 	pages = {627–634},
-	numpages = {8},
-	keywords = {uncertainty, computational social choice, manipulation},
-	location = {Valencia, Spain},
 	series = {AAMAS '12},
 	url={dl.acm.org/doi/10.5555/2343776.2343786}
 }
@@ -335,19 +280,17 @@
 	author={Conitzer, Vincent and Walsh,Toby and Xia,Lirong},
 	title={Dominating Manipulations in Voting with Partial Information},
 	year={2011},
-	cdate={1293840000000},
 	url={www.aaai.org/ocs/index.php/AAAI/AAAI11/paper/view/3706},
-	booktitle={AAAI},
+	booktitle={Proceedings of AAAI'11},
 }
 
 @article{Lev2019,
 	author = {Lev, Omer and Meir, Reshef and Obraztsova, Svetlana and Polukarov, Maria},
 	year = {2019},
-	month = {07},
 	pages = {2077-2084},
 	title = {Heuristic Voting as Ordinal Dominance Strategies},
 	volume = {33},
-	journal = {Proceedings of the AAAI Conference on Artificial Intelligence},
+	journal = {Proceedings of the AAAI'19},
 	doi = {10.1609/aaai.v33i01.33012077}
 }
 
@@ -355,22 +298,15 @@
 	author = {Reijngoud, Annemieke and Endriss, Ulle},
 	title = {Voter Response to Iterated Poll Information},
 	year = {2012},
-	isbn = {0981738125},
-	publisher = {International Foundation for Autonomous Agents and Multiagent Systems},
-	address = {Richland, SC},
-	booktitle = {Proceedings of the 11th International Conference on Autonomous Agents and Multiagent Systems - Volume 2},
+	booktitle = {Proceedings of AAMAS'12},
+	volume={2},
 	pages = {635–644},
-	numpages = {10},
-	keywords = {voting theory, computational social choice},
-	location = {Valencia, Spain},
-	series = {AAMAS '12},
 	url={dl.acm.org/doi/10.5555/2343776.2343787}
 }
 
 @article{Giritligil2005,
 	author = {Giritligil, Ayca and Sertel, Murat and Kara, Ayça},
 	year = {2005},
-	month = {02},
 	pages = {43-73},
 	title = {Does majoritarian approval matter in selecting a social choice rule? An exploratory panel study},
 	volume = {25},
@@ -378,20 +314,12 @@
 	doi = {10.1007/s00355-005-0024-8}
 }
 
-
-
 @inproceedings{Baumeister2019,
 	author = {Baumeister, Dorothea and Hogrebe, Tobias},
 	title = {Manipulative Design of Scoring Systems},
 	year = {2019},
-	isbn = {9781450363099},
-	publisher = {International Foundation for Autonomous Agents and Multiagent Systems},
-	address = {Richland, SC},
-	booktitle = {Proceedings of the 18th International Conference on Autonomous Agents and MultiAgent Systems},
+	booktitle = {Proceedings of AAMAS'19},
 	pages = {1814–1816},
-	numpages = {3},
-	keywords = {scoring system, manipulation, distances},
-	location = {Montreal QC, Canada},
 	series = {AAMAS '19},
 	url = {dl.acm.org/doi/10.5555/3306127.3331928}
 }
